[tool.poetry]
name = "09_eval_select"
version = "0.1.0"
description = "Homework for RS School Machine Learning course"
authors = ["densinc <dvyagovdik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
