[tool.poetry]
name = "09_eval_select"
version = "0.1.0"
description = "Homework for RS School Machine Learning course"
authors = ["densinc <dvyagovdik@gmail.com>"]

[tool.poetry.scripts]
train = " 09_eval_select.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
